--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                 que impulsionou nossa produtividade e eficiência para novos
                 patamares."
               </h2>
-              
+
               <img
                 class="testimonial-img rounded-circle"
                 src="images/profile-pic-3.jpg"
@@ -267,6 +267,8 @@
         </button>
       </div>
     </section>
+
+    <footer></footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
