--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <a href="#" class="nav-link">Soluções</a>
               </li>
               <li class="nav-item mx-3">
-                <a href="#" class="nav-link">Contato</a>
+                <a href="#contato" class="nav-link">Contato</a>
               </li>
             </ul>
           </div>
@@ -107,7 +107,7 @@
         <div class="row g-4">
           <div class="col-xl-4 col-lg-4 col-md-4">
             <article class="destaque-content p-4 rounded-4">
-              <i class="fas fa-cogs fa-5x mb-5"></i>
+              <i class="fas fa-cogs fa-5x mb-3"></i>
               <h3 class="destaque-title">
                 Aumente a produtividade da sua equipe com automações inteligentes.
               </h3>
@@ -115,7 +115,7 @@
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4">
             <article class="destaque-content p-4 rounded-4">
-              <i class="fas fa-chart-simple fa-5x mb-5"></i>
+              <i class="fas fa-chart-simple fa-5x mb-3"></i>
               <h3 class="destaque-title">
                 Tenha visibilidade total dos processos e operações em tempo real.
               </h3>
@@ -123,7 +123,7 @@
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4">
             <article class="destaque-content p-4 rounded-4">
-              <i class="fas fa-arrows-turn-to-dots fa-5x mb-5"></i>
+              <i class="fas fa-arrows-turn-to-dots fa-5x mb-3"></i>
               <h3 class="destaque-title">
                 Adapte-se facilmente às mudanças do mercado com flexibilidade e
                 escalabilidade.
@@ -175,26 +175,28 @@
         </div>
   
         <!-- Feature 3 -->
-        <div class="feature row row-col-2 px-5">
-          <article
-            class="feature-text col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
-          >
-            <h1>Priorizamos Sua Segurança e Estabilidade</h1>
-            <p>
-              Implementamos medidas avançadas de segurança e redundância para
-              assegurar a integridade dos seus dados e a confiabilidade dos nossos
-              serviços. Com protocolos de segurança de ponta, nossa plataforma
-              mantém suas operações funcionando sem interrupções, proporcionando
-              tranquilidade e confiança total.
-            </p>
-          </article>
-          <div class="col-xl-6 col-lg-6 col-md-6 d-flex justify-content-center">
-            <img
-              class="img-fluid feature-img"
-              id="cadeado"
-              src="images/cloud-3865312_640.jpg"
-              alt="#"
-            />
+        <div class="feature">
+          <div class="third-feature row row-col-2 px-5">
+            <article
+              class="feature-text col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
+            >
+              <h1>Priorizamos Sua Segurança e Estabilidade</h1>
+              <p>
+                Implementamos medidas avançadas de segurança e redundância para
+                assegurar a integridade dos seus dados e a confiabilidade dos nossos
+                serviços. Com protocolos de segurança de ponta, nossa plataforma
+                mantém suas operações funcionando sem interrupções, proporcionando
+                tranquilidade e confiança total.
+              </p>
+            </article>
+            <div class="col-xl-6 col-lg-6 col-md-6 d-flex justify-content-center">
+              <img
+                class="img-fluid feature-img"
+                id="cadeado"
+                src="images/cloud-3865312_640.jpg"
+                alt="#"
+              />
+            </div>
           </div>
         </div>
       </section>
@@ -332,7 +334,7 @@
   
       <footer class="container-fluid p-5 g-5">
         <div class="row">
-          <div class="col d-flex flex-column gap-4">
+          <div class="col d-flex flex-column gap-4 mt-3">
             <a href="#" class="footer-link">
               <h5>
                 Sobre nós
@@ -358,7 +360,7 @@
             </div>
           </div>
   
-          <div class="col d-flex flex-column align-items-center gap-3">
+          <div class="col d-flex flex-column align-items-center gap-5">
             <div class="logo-footer">
               <div class="lines-footer">
                 <div></div>
@@ -386,6 +388,7 @@
           </div>
   
           <div class="col d-flex flex-column align-items-center">
+            <h5>Venha nos visitar!</h5>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.6244984603304!2d-34.917265726190266!3d-8.037593580257033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab194e22a895d9%3A0x23ca9ada8825d499!2sTrois%20Beaut%C3%A9%3A%20Sal%C3%A3o%20de%20Beleza%20Zona%20Norte%20Recife!5e0!3m2!1spt-BR!2sbr!4v1698944543034!5m2!1spt-BR!2sbr"
               width="250"
