add nav and hero font-size responsiveness

--- a/index.html
+++ b/index.html
@@ -21,20 +21,22 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/logos.css">
-    <link rel="stylesheet" href="css/decoration.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/hero.css">
-    <link rel="stylesheet" href="css/destaques.css">
-    <link rel="stylesheet" href="css/features.css">
-    <link rel="stylesheet" href="css/testimonials.css">
-    <link rel="stylesheet" href="css/contato.css">
-    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/logos.css" />
+    <link rel="stylesheet" href="css/decoration.css" />
+    <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/hero.css" />
+    <link rel="stylesheet" href="css/destaques.css" />
+    <link rel="stylesheet" href="css/features.css" />
+    <link rel="stylesheet" href="css/testimonials.css" />
+    <link rel="stylesheet" href="css/contato.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
 
   <body>
     <div class="website-container">
-      <nav class="navbar navbar-expand-lg px-3 px-md-4 px-lg-5 px-xl-5 px-xxl-5 fixed-top">
+      <nav
+        class="navbar navbar-expand-lg px-3 px-md-4 px-lg-5 py-lg-3 fixed-top"
+      >
         <div class="container-fluid">
           <a href="#" class="logo-container navbar-brand">
             <div class="logo-nav">
@@ -47,7 +49,7 @@
               </div>
             </div>
           </a>
-  
+
           <button
             class="navbar-toggler"
             type="button"
@@ -59,9 +61,11 @@
           >
             <i class="fa fa-bars fa-2x"></i>
           </button>
-  
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto fs-5">
+            <ul
+              class="navbar-nav me-auto "
+            >
               <li class="nav-item mx-3">
                 <a href="#" class="nav-link">A Empresa</a>
               </li>
@@ -75,16 +79,19 @@
           </div>
         </div>
       </nav>
-  
-      <section class="container-fluid d-flex flex-column gap-2 text-center justify-content-center p-5" id="hero">
+
+      <section
+        id="hero"
+        class="container-fluid d-flex flex-column gap-3 gap-sm-2 gap-md-1 text-center justify-content-center p-3 p-sm-4 p-md-5"
+      >
         <div class="decoration d-none d-md-block">
           <div class="component"></div>
           <div class="component"></div>
           <div class="component"></div>
           <div class="component"></div>
         </div>
-  
-        <div class="logo align-self-center pt-5 me-4 me-md-0">
+
+        <div class="logo align-self-center me-5 me-md-0">
           <h1 class="logo-header">
             SYSTEMA
             <span class="logo-subtext">Solutions</span>
@@ -97,19 +104,20 @@
             </div>
           </div>
         </div>
-  
-        <h1 id="hero-header" class="mt-4">
+
+        <h1 id="hero-header">
           Transforme a Gestão da Sua Empresa com o Nosso Poderoso Sistema ERP
         </h1>
       </section>
-  
+
       <section id="destaques" class="container-fluid text-center p-5">
         <div class="row g-4">
           <div class="col-xl-4 col-lg-4 col-md-4">
             <article class="destaque-content p-4 rounded-4">
               <i class="fas fa-cogs fa-5x mb-3"></i>
               <h3 class="destaque-title">
-                Aumente a produtividade da sua equipe com automações inteligentes.
+                Aumente a produtividade da sua equipe com automações
+                inteligentes.
               </h3>
             </article>
           </div>
@@ -117,7 +125,8 @@
             <article class="destaque-content p-4 rounded-4">
               <i class="fas fa-chart-simple fa-5x mb-3"></i>
               <h3 class="destaque-title">
-                Tenha visibilidade total dos processos e operações em tempo real.
+                Tenha visibilidade total dos processos e operações em tempo
+                real.
               </h3>
             </article>
           </div>
@@ -132,25 +141,31 @@
           </div>
         </div>
       </section>
-  
+
       <section id="features" class="container-fluid g-0">
         <!-- Feature 1 -->
         <div class="feature row row-col-2 p-5 g-0">
           <article
             class="feature-text col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
           >
-            <h1>Flexibilidade para montar um ERP de acordo com o seu tamanho</h1>
+            <h1>
+              Flexibilidade para montar um ERP de acordo com o seu tamanho
+            </h1>
             <p>
               Com uma gama robusta de funcionalidades, nossa plataforma é
-              projetada para atender às demandas de empresas de todos os portes e
-              setores.
+              projetada para atender às demandas de empresas de todos os portes
+              e setores.
             </p>
           </article>
           <div class="feature-img col-xl-6 col-lg-6 col-md-6">
-            <img class="img-fluid" src="images/browser-3614768_1280.png" alt="" />
+            <img
+              class="img-fluid"
+              src="images/browser-3614768_1280.png"
+              alt=""
+            />
           </div>
         </div>
-  
+
         <!-- Feature 2 -->
         <div class="feature row row-col-2 p-5 g-0 d-flex flex-row-reverse">
           <article
@@ -160,9 +175,9 @@
             <p>
               Com o nosso Sistema ERP baseado na nuvem, você tem a liberdade de
               gerenciar e monitorar as operações da sua empresa a partir de
-              qualquer dispositivo, em qualquer lugar. Seja no escritório, em casa
-              ou em trânsito, a nossa plataforma oferece acesso conveniente e sem
-              complicações, garantindo que você esteja sempre no controle.
+              qualquer dispositivo, em qualquer lugar. Seja no escritório, em
+              casa ou em trânsito, a nossa plataforma oferece acesso conveniente
+              e sem complicações, garantindo que você esteja sempre no controle.
             </p>
           </article>
           <div class="feature-img col-xl-6 col-lg-6 col-md-6">
@@ -173,7 +188,7 @@
             />
           </div>
         </div>
-  
+
         <!-- Feature 3 -->
         <div class="feature">
           <div class="third-feature row row-col-2 px-5">
@@ -183,13 +198,15 @@
               <h1>Priorizamos Sua Segurança e Estabilidade</h1>
               <p>
                 Implementamos medidas avançadas de segurança e redundância para
-                assegurar a integridade dos seus dados e a confiabilidade dos nossos
-                serviços. Com protocolos de segurança de ponta, nossa plataforma
-                mantém suas operações funcionando sem interrupções, proporcionando
-                tranquilidade e confiança total.
+                assegurar a integridade dos seus dados e a confiabilidade dos
+                nossos serviços. Com protocolos de segurança de ponta, nossa
+                plataforma mantém suas operações funcionando sem interrupções,
+                proporcionando tranquilidade e confiança total.
               </p>
             </article>
-            <div class="col-xl-6 col-lg-6 col-md-6 d-flex justify-content-center">
+            <div
+              class="col-xl-6 col-lg-6 col-md-6 d-flex justify-content-center"
+            >
               <img
                 class="img-fluid feature-img"
                 id="cadeado"
@@ -200,7 +217,7 @@
           </div>
         </div>
       </section>
-  
+
       <section id="testimonials">
         <div
           id="carouselTestimonials"
@@ -214,16 +231,16 @@
             >
               <div class="carousel-content mx-auto text-center">
                 <h2 class="testimonial-text mb-5">
-                  "O Sistema F transformou completamente a forma como gerenciamos
-                  nossos processos de negócios. A automação inteligente e a
-                  visibilidade em tempo real nos deram um controle sem precedentes
-                  sobre nossas operações. Além disso, a flexibilidade e
-                  escalabilidade do sistema nos permitiram nos adaptar rapidamente
-                  às mudanças do mercado. É uma solução verdadeiramente poderosa
-                  que impulsionou nossa produtividade e eficiência para novos
-                  patamares."
+                  "O Sistema F transformou completamente a forma como
+                  gerenciamos nossos processos de negócios. A automação
+                  inteligente e a visibilidade em tempo real nos deram um
+                  controle sem precedentes sobre nossas operações. Além disso, a
+                  flexibilidade e escalabilidade do sistema nos permitiram nos
+                  adaptar rapidamente às mudanças do mercado. É uma solução
+                  verdadeiramente poderosa que impulsionou nossa produtividade e
+                  eficiência para novos patamares."
                 </h2>
-  
+
                 <img
                   class="testimonial-img rounded-circle"
                   src="images/profile-pic-3.jpg"
@@ -234,19 +251,19 @@
                 <em class="d-block testimonial-person">InovaTech S.A.</em>
               </div>
             </div>
-  
+
             <div
               class="carousel-item container-fluid p-3"
               data-bs-interval="4000"
             >
               <div class="carousel-content mx-auto text-center">
                 <h2 class="testimonial-text mb-5">
-                  "O Sistema F revolucionou nossos processos na Tech Innovations.
-                  Com automação inteligente e visibilidade em tempo real, ganhamos
-                  controle total sobre as operações. Sua flexibilidade e
-                  escalabilidade permitiram adaptação ágil às mudanças do mercado.
-                  Uma solução poderosa que elevou nossa produtividade e eficiência
-                  a novos patamares."
+                  "O Sistema F revolucionou nossos processos na Tech
+                  Innovations. Com automação inteligente e visibilidade em tempo
+                  real, ganhamos controle total sobre as operações. Sua
+                  flexibilidade e escalabilidade permitiram adaptação ágil às
+                  mudanças do mercado. Uma solução poderosa que elevou nossa
+                  produtividade e eficiência a novos patamares."
                 </h2>
                 <img
                   class="testimonial-img rounded-circle"
@@ -259,7 +276,7 @@
               </div>
             </div>
           </div>
-  
+
           <button
             class="carousel-control-prev"
             type="button"
@@ -280,11 +297,13 @@
           </button>
         </div>
       </section>
-  
+
       <section id="contato">
         <form method="post" class="row p-5 g-5 container-fluid">
           <div class="col-xl-4 col-lg-4 d-flex flex-column gap-4">
-            <h1 id="form-header">Se interessou? Entre em contato com a gente!</h1>
+            <h1 id="form-header">
+              Se interessou? Entre em contato com a gente!
+            </h1>
             <img
               src="images/mail-1454731_1280.png"
               class="img-fluid"
@@ -322,34 +341,33 @@
             </div>
             <div class="data">
               <label for="email" class="form-label d-block">Email: </label>
-              <input class="form-control" type="email" name="email" id="email" />
+              <input
+                class="form-control"
+                type="email"
+                name="email"
+                id="email"
+              />
             </div>
-  
+
             <button type="submit" class="btn btn-lg btn-outline-primary">
               Enviar
             </button>
           </div>
         </form>
       </section>
-  
+
       <footer class="container-fluid p-5 g-5">
         <div class="row">
           <div class="col d-flex flex-column gap-4 mt-3">
             <a href="#" class="footer-link">
-              <h5>
-                Sobre nós
-              </h5>
+              <h5>Sobre nós</h5>
             </a>
             <a href="#" class="footer-link">
-              <h5>
-                Soluções
-              </h5>
+              <h5>Soluções</h5>
             </a>
             <div class="contact-info">
               <h5>Contato:</h5>
-              <em class="d-block mb-2">
-                Email: email@example.com
-              </em>
+              <em class="d-block mb-2"> Email: email@example.com </em>
               <em class="d-block mb-2">
                 <i class="fa-solid fa-phone"></i>
                 <span>+55 (81) 1234-5678</span>
@@ -359,7 +377,7 @@
               </em>
             </div>
           </div>
-  
+
           <div class="col d-flex flex-column align-items-center gap-5">
             <div class="logo-footer">
               <div class="lines-footer">
@@ -372,11 +390,11 @@
               <a href="https://www.instagram.com" target="_blank">
                 <i class="fa-brands fa-instagram fa-2x social-icon"></i>
               </a>
-  
+
               <a href="https://www.linkedin.com" target="_blank">
                 <i class="fa-brands fa-linkedin-in fa-2x social-icon"></i>
               </a>
-  
+
               <a
                 href="https://api.whatsapp.com/send?phone=551234567890"
                 target="_blank"
@@ -384,9 +402,11 @@
                 <i class="fa-brands fa-whatsapp fa-2x social-icon"></i>
               </a>
             </div>
-            <p id="copyright">© 2023 Systema F. Todos os direitos reservados.</p>
+            <p id="copyright">
+              © 2023 Systema F. Todos os direitos reservados.
+            </p>
           </div>
-  
+
           <div class="col d-flex flex-column align-items-center">
             <h5>Venha nos visitar!</h5>
             <iframe
@@ -401,9 +421,7 @@
           </div>
         </div>
       </footer>
-
     </div>
-
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
