start solucoes page

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/logos.css" />
-    <link rel="stylesheet" href="css/decoration.css" />
     <link rel="stylesheet" href="css/navbar.css" />
-    <link rel="stylesheet" href="css/hero.css" />
-    <link rel="stylesheet" href="css/destaques.css" />
-    <link rel="stylesheet" href="css/features.css" />
-    <link rel="stylesheet" href="css/testimonials.css" />
-    <link rel="stylesheet" href="css/contato.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/home/decoration.css" />
+    <link rel="stylesheet" href="css/home/hero.css" />
+    <link rel="stylesheet" href="css/home/destaques.css" />
+    <link rel="stylesheet" href="css/home/features.css" />
+    <link rel="stylesheet" href="css/home/testimonials.css" />
+    <link rel="stylesheet" href="css/home/contato.css" />
   </head>
 
   <body>
-    <div class="website-container">
+    <div class="website-wrapper">
       <nav
         class="navbar navbar-expand-lg px-3 px-md-4 px-lg-5 py-lg-3 fixed-top"
       >
