--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 
   <body>
     <div class="website-wrapper">
-      <nav
-        class="navbar navbar-expand-lg px-3 px-md-4 px-lg-5 py-lg-3 fixed-top"
-      >
+      <nav class="navbar navbar-expand-lg px-3 px-md-4 px-lg-5 fixed-top">
         <div class="container-fluid">
           <a href="#" class="logo-container navbar-brand">
             <div class="logo-nav">
@@ -63,9 +61,7 @@
           </button>
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul
-              class="navbar-nav me-auto "
-            >
+            <ul class="navbar-nav me-auto">
               <li class="nav-item mx-3">
                 <a href="#" class="nav-link">A Empresa</a>
               </li>
@@ -82,7 +78,7 @@
 
       <section
         id="hero"
-        class="container-fluid d-flex flex-column gap-3 gap-sm-2 gap-md-1 text-center justify-content-center p-3 p-sm-4 p-md-5"
+        class="container-fluid d-flex flex-column gap-4 text-center justify-content-center p-3 p-sm-4 p-md-5"
       >
         <div class="decoration d-none d-md-block">
           <div class="component"></div>
@@ -114,7 +110,7 @@
         <div class="row g-4">
           <div class="col-xl-4 col-lg-4 col-md-4">
             <article class="destaque-content p-4 rounded-4">
-              <i class="fas fa-cogs fa-5x mb-3"></i>
+              <i class="fas fa-cogs fa-4x mb-3"></i>
               <h3 class="destaque-title">
                 Aumente a produtividade da sua equipe com automações
                 inteligentes.
@@ -123,7 +119,7 @@
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4">
             <article class="destaque-content p-4 rounded-4">
-              <i class="fas fa-chart-simple fa-5x mb-3"></i>
+              <i class="fas fa-chart-simple fa-4x mb-3"></i>
               <h3 class="destaque-title">
                 Tenha visibilidade total dos processos e operações em tempo
                 real.
@@ -132,7 +128,7 @@
           </div>
           <div class="col-xl-4 col-lg-4 col-md-4">
             <article class="destaque-content p-4 rounded-4">
-              <i class="fas fa-arrows-turn-to-dots fa-5x mb-3"></i>
+              <i class="fas fa-arrows-turn-to-dots fa-4x mb-3"></i>
               <h3 class="destaque-title">
                 Adapte-se facilmente às mudanças do mercado com flexibilidade e
                 escalabilidade.
@@ -146,19 +142,20 @@
         <!-- Feature 1 -->
         <div class="feature row row-col-2 p-5 g-0">
           <article
-            class="feature-text col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
+            class="col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
           >
-            <h1>
+            <h1 class="feature-header">
               Flexibilidade para montar um ERP de acordo com o seu tamanho
             </h1>
-            <p>
+            <p class="feature-paragraph">
               Com uma gama robusta de funcionalidades, nossa plataforma é
               projetada para atender às demandas de empresas de todos os portes
               e setores.
             </p>
           </article>
-          <div class="feature-img col-xl-6 col-lg-6 col-md-6">
+          <div class="feature-img col-md-6 d-flex justify-content-center">
             <img
+              id="fi1"
               class="img-fluid"
               src="images/browser-3614768_1280.png"
               alt=""
@@ -169,10 +166,12 @@
         <!-- Feature 2 -->
         <div class="feature row row-col-2 p-5 g-0 d-flex flex-row-reverse">
           <article
-            class="feature-text col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
+            class="col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
           >
-            <h1>Liberdade de Acesso em Qualquer Lugar</h1>
-            <p>
+            <h1 class="feature-header">
+              Liberdade de Acesso em Qualquer Lugar
+            </h1>
+            <p class="feature-paragraph">
               Com o nosso Sistema ERP baseado na nuvem, você tem a liberdade de
               gerenciar e monitorar as operações da sua empresa a partir de
               qualquer dispositivo, em qualquer lugar. Seja no escritório, em
@@ -180,8 +179,9 @@
               e sem complicações, garantindo que você esteja sempre no controle.
             </p>
           </article>
-          <div class="feature-img col-xl-6 col-lg-6 col-md-6">
+          <div class="feature-img col-md-6 d-flex justify-content-center">
             <img
+              id="fi2"
               class="img-fluid"
               src="images/cloud-3406627_1280-removebg-preview.png"
               alt=""
@@ -191,12 +191,14 @@
 
         <!-- Feature 3 -->
         <div class="feature">
-          <div class="third-feature row row-col-2 px-5">
+          <div class="third-feature row row-col-2 p-5">
             <article
-              class="feature-text col-xl-6 col-lg-6 col-md-6 d-flex flex-column justify-content-center gap-3"
+              class="col-md-6 d-flex flex-column justify-content-center gap-3"
             >
-              <h1>Priorizamos Sua Segurança e Estabilidade</h1>
-              <p>
+              <h1 class="feature-header">
+                Priorizamos Sua Segurança e Estabilidade
+              </h1>
+              <p class="feature-paragraph">
                 Implementamos medidas avançadas de segurança e redundância para
                 assegurar a integridade dos seus dados e a confiabilidade dos
                 nossos serviços. Com protocolos de segurança de ponta, nossa
@@ -204,12 +206,10 @@
                 proporcionando tranquilidade e confiança total.
               </p>
             </article>
-            <div
-              class="col-xl-6 col-lg-6 col-md-6 d-flex justify-content-center"
-            >
+            <div class="col-md-6 d-flex justify-content-center">
               <img
+                id="fi3"
                 class="img-fluid feature-img"
-                id="cadeado"
                 src="images/cloud-3865312_640.jpg"
                 alt="#"
               />
@@ -230,16 +230,13 @@
               data-bs-interval="4000"
             >
               <div class="carousel-content mx-auto text-center">
-                <h2 class="testimonial-text mb-5">
-                  "O Sistema F transformou completamente a forma como
-                  gerenciamos nossos processos de negócios. A automação
-                  inteligente e a visibilidade em tempo real nos deram um
-                  controle sem precedentes sobre nossas operações. Além disso, a
-                  flexibilidade e escalabilidade do sistema nos permitiram nos
-                  adaptar rapidamente às mudanças do mercado. É uma solução
-                  verdadeiramente poderosa que impulsionou nossa produtividade e
-                  eficiência para novos patamares."
-                </h2>
+                <p class="testimonial-text mb-md-5">
+                  "A chegada do Sistema F na InovaTech transformou nossa
+                  abordagem operacional. Com recursos inovadores, experienciamos
+                  melhoria substancial na eficiência. Nos deu vantagem
+                  competitiva, marcando uma nova era de eficácia em nossos
+                  processos."
+                </p>
 
                 <img
                   class="testimonial-img rounded-circle"
@@ -256,23 +253,27 @@
               class="carousel-item container-fluid p-3"
               data-bs-interval="4000"
             >
-              <div class="carousel-content mx-auto text-center">
-                <h2 class="testimonial-text mb-5">
-                  "O Sistema F revolucionou nossos processos na Tech
-                  Innovations. Com automação inteligente e visibilidade em tempo
-                  real, ganhamos controle total sobre as operações. Sua
-                  flexibilidade e escalabilidade permitiram adaptação ágil às
-                  mudanças do mercado. Uma solução poderosa que elevou nossa
-                  produtividade e eficiência a novos patamares."
-                </h2>
+              <div
+                class="carousel-content mx-auto text-center d-flex flex-column align-items-center"
+              >
+                <p class="testimonial-text mb-md-5">
+                  "O Sistema F revolucionou a Tech Innovations. Com automações
+                  inteligentes e visibilidade em tempo real, ganhamos controle
+                  total nos processos operacionais, adaptando-nos às mudanças do
+                  mercado. Uma solução poderosa elevou que nossa produtividade."
+                </p>
                 <img
                   class="testimonial-img rounded-circle"
                   src="images/profile-pic-3.jpg"
                   alt="dog-profile"
                 />
-                <em class="d-block">Joana Silva</em>
-                <em class="d-block">Diretora de Operações</em>
-                <em class="d-block">Tech Innovations Ltda.</em>
+                <em class="d-block testimonial-person">Joana Silva</em>
+                <em class="d-block testimonial-person"
+                  >Diretora de Operações</em
+                >
+                <em class="d-block testimonial-person"
+                  >Tech Innovations Ltda.</em
+                >
               </div>
             </div>
           </div>
@@ -299,9 +300,12 @@
       </section>
 
       <section id="contato">
-        <form method="post" class="row p-5 g-5 container-fluid">
+        <form
+          method="post"
+          class="row p-5 g-5 container-fluid d-none d-md-flex"
+        >
           <div class="col-xl-4 col-lg-4 d-flex flex-column gap-4">
-            <h1 id="form-header">
+            <h1 id="form-main-header">
               Se interessou? Entre em contato com a gente!
             </h1>
             <img
@@ -324,16 +328,26 @@
           <div class="col-xl-4 col-lg-4 d-flex flex-column gap-3">
             <div class="data">
               <label for="fName" class="form-label d-block">Nome: </label>
-              <input class="form-control" type="text" name="fName" id="fName" />
+              <input
+                class="form-control w-100"
+                type="text"
+                name="fName"
+                id="fName"
+              />
             </div>
             <div class="data">
               <label for="lName" class="form-label d-block">Sobrenome: </label>
-              <input class="form-control" type="text" name="lName" id="lName" />
+              <input
+                class="form-control w-100"
+                type="text"
+                name="lName"
+                id="lName"
+              />
             </div>
             <div class="data">
               <label for="assunto" class="form-label d-block">Assunto: </label>
               <input
-                class="form-control"
+                class="form-control w-100"
                 type="text"
                 name="assunto"
                 id="assunto"
@@ -342,7 +356,7 @@
             <div class="data">
               <label for="email" class="form-label d-block">Email: </label>
               <input
-                class="form-control"
+                class="form-control w-100"
                 type="email"
                 name="email"
                 id="email"
@@ -354,11 +368,70 @@
             </button>
           </div>
         </form>
+
+        <form
+          method="post"
+          class="d-block d-md-none p-5 d-flex flex-column gap-3"
+        >
+          <div class="form-header d-flex gap-2 align-items-center">
+            <h3>Se interessou? Entre em contato com a gente!</h3>
+            <img src="images/mail-1454731_1280.png" alt="" class="img-fluid" />
+          </div>
+          <div class="data mb-4">
+            <label for="fName" class="form-label d-block">Nome: </label>
+            <input
+              class="form-control w-100"
+              type="text"
+              name="fName"
+              id="fName"
+            />
+          </div>
+          <div class="data mb-4">
+            <label for="lName" class="form-label d-block">Sobrenome: </label>
+            <input
+              class="form-control w-100"
+              type="text"
+              name="lName"
+              id="lName"
+            />
+          </div>
+          <div class="data mb-4">
+            <label for="email" class="form-label d-block">Email: </label>
+            <input
+              class="form-control w-100"
+              type="email"
+              name="email"
+              id="email"
+            />
+          </div>
+          <div class="data mb-4">
+            <label for="assunto" class="form-label d-block">Assunto: </label>
+            <input
+              class="form-control w-100"
+              type="text"
+              name="assunto"
+              id="assunto"
+            />
+          </div>
+
+          <textarea
+            class="form-control rounded-4 p-3 fs-4"
+            placeholder="Sua menssagem"
+            name="message"
+            id="message"
+            cols="30"
+            rows="10"
+          ></textarea>
+
+          <button type="submit" class="btn btn-lg btn-outline-primary">
+            Enviar
+          </button>
+        </form>
       </section>
 
       <footer class="container-fluid p-5 g-5">
-        <div class="row">
-          <div class="col d-flex flex-column gap-4 mt-3">
+        <div class="row gy-5 gy-md-0">
+          <div class="col-12 col-md-4 d-flex flex-column gap-4 mt-3">
             <a href="#" class="footer-link">
               <h5>Sobre nós</h5>
             </a>
@@ -378,7 +451,7 @@
             </div>
           </div>
 
-          <div class="col d-flex flex-column align-items-center gap-5">
+          <div class="col-12 col-md-4 d-flex flex-column align-items-center gap-5">
             <div class="logo-footer">
               <div class="lines-footer">
                 <div></div>
@@ -407,7 +480,9 @@
             </p>
           </div>
 
-          <div class="col d-flex flex-column align-items-center">
+          <div
+            class="col-md-4 d-flex flex-column align-items-center d-none d-md-block"
+          >
             <h5>Venha nos visitar!</h5>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3950.6244984603304!2d-34.917265726190266!3d-8.037593580257033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab194e22a895d9%3A0x23ca9ada8825d499!2sTrois%20Beaut%C3%A9%3A%20Sal%C3%A3o%20de%20Beleza%20Zona%20Norte%20Recife!5e0!3m2!1spt-BR!2sbr!4v1698944543034!5m2!1spt-BR!2sbr"
