--- a/solucoes.html
+++ b/solucoes.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/logos.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/solucoes/hero.css">
+    <link rel="stylesheet" href="css/solucoes/hero.css" />
   </head>
   <body>
     <div class="website-wrapper">
@@ -73,23 +73,79 @@
         </div>
       </nav>
 
-      <section id="hero" class="container-fluid p-5">
+      <section
+        id="hero"
+        class="container-fluid py-5 px-4 d-flex flex-column gap-5"
+      >
         <h1 id="hero-header" class="text-center">
-            Amplie Suas Fronteiras: Soluções Personalizadas para Diversas Áreas de Atuação
+          Não importa sua área de atuação, temos uma solução para seu negócio!
         </h1>
         <div class="row">
-            <div class="col">
-                <div class="card">
-                    <img src="" alt="">
-                </div>
-            </div>
-            <div class="col">
+          <div class="col">
+            <div class="card rounded-5">
+              <img
+                src="images/illustration-agro-removebg-preview.png"
+                alt=""
+                class="card-img"
+              />
 
+              <div class="card-body p-5 d-flex flex-column gap-3">
+                <h4 class="card-title">Fystem@ Agro</h4>
+                <p class="card-text">
+                  Potencialize sua produção com um software inteligente que
+                  simplifica todas as etapas da sua operação, personalize
+                  conforme as suas necessidades e veja seu agronegócio
+                  prosperar!
+                </p>
+              </div>
             </div>
-            <div class="col"></div>
+          </div>
+
+          <div class="col">
+            <div class="card rounded-5" id="card2">
+              <img
+                src="images/illustration-vet-small__1_-removebg-preview.png"
+                alt=""
+                id="img-card-2"
+                class="card-img p-4"
+              />
+
+              <div class="card-body p-5 d-flex flex-column gap-3">
+                <h4 class="card-title">Fystem@ Vet</h4>
+                <p class="card-text">
+                  O Fystem@ Vet é a solução completa para a gestão eficiente da
+                  sua clínica veterinária, com agendamento simplificado e
+                  registros eletrônicos, você proporciona uma experiência
+                  veterinária excepcional para seus clientes.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col">
+            <div class="card rounded-5" id="card2">
+              <img
+                src="images/ilustração-vet.jpg"
+                alt=""
+                class="card-img px-3"
+              />
+
+              <div class="card-body p-5 d-flex flex-column gap-3">
+                <h4 class="card-title">Fystem@ Web</h4>
+                <p class="card-text">
+                  Transforme a gestão da sua pequena empresa com o Fystem@ Web,
+                  proporcionando simplicidade e eficiência. Gerencie finanças,
+                  controle de estoque e interação com clientes. Alcance o
+                  sucesso com a ferramenta ideal para impulsionar o
+                  crescimento do seu negócio.
+                </p>
+              </div>
+            </div>
+          </div>
         </div>
-
       </section>
+
+      <section id=""></section>
 
       <footer class="container-fluid p-5 g-5">
         <div class="row">
