add proper folders and start backend configs

--- a/public/pages/solucoes.html
+++ b/public/pages/solucoes.html
@@ -33,7 +33,7 @@
         class="navbar navbar-expand-lg px-3 px-md-4 px-lg-5 py-lg-2 fixed-top"
       >
         <div class="container-fluid">
-          <a href="#" class="logo-container navbar-brand">
+          <a href="/" class="logo-container navbar-brand">
             <div class="logo-nav">
               <div class="f-illustration-nav">
                 <div class="lines-container-nav">
@@ -60,10 +60,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto">
               <li class="nav-item mx-3">
-                <a href="#" class="nav-link">A Empresa</a>
+                <a href="/Sobre" class="nav-link">A Empresa</a>
               </li>
               <li class="nav-item mx-3">
-                <a href="#" class="nav-link">Soluções</a>
+                <a href="/Solucoes" class="nav-link">Soluções</a>
               </li>
               <li class="nav-item mx-3">
                 <a href="#contato" class="nav-link">Contato</a>
