--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -20,23 +20,23 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/logos.css" />
-    <link rel="stylesheet" href="css/navbar.css" />
-    <link rel="stylesheet" href="css/footer.css" />
-    <link rel="stylesheet" href="css/home/decoration.css" />
-    <link rel="stylesheet" href="css/home/hero.css" />
-    <link rel="stylesheet" href="css/home/destaques.css" />
-    <link rel="stylesheet" href="css/home/features.css" />
-    <link rel="stylesheet" href="css/home/testimonials.css" />
-    <link rel="stylesheet" href="css/home/contato.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/logos.css" />
+    <link rel="stylesheet" href="../css/navbar.css" />
+    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="../css/home/decoration.css" />
+    <link rel="stylesheet" href="../css/home/hero.css" />
+    <link rel="stylesheet" href="../css/home/destaques.css" />
+    <link rel="stylesheet" href="../css/home/features.css" />
+    <link rel="stylesheet" href="../css/home/testimonials.css" />
+    <link rel="stylesheet" href="../css/home/contato.css" />
   </head>
 
   <body>
     <div class="website-wrapper">
       <nav class="navbar navbar-expand-lg px-3 px-md-4 px-lg-5 fixed-top">
         <div class="container-fluid">
-          <a href="#" class="logo-container navbar-brand">
+          <a href="/" class="logo-container navbar-brand">
             <div class="logo-nav">
               <div class="f-illustration-nav">
                 <div class="lines-container-nav">
@@ -66,7 +66,7 @@
                 <a href="#" class="nav-link">A Empresa</a>
               </li>
               <li class="nav-item mx-3">
-                <a href="#" class="nav-link">Soluções</a>
+                <a href="/Solucoes" class="nav-link">Soluções</a>
               </li>
               <li class="nav-item mx-3">
                 <a href="#contato" class="nav-link">Contato</a>
@@ -157,7 +157,7 @@
             <img
               id="fi1"
               class="img-fluid"
-              src="images/browser-3614768_1280.png"
+              src="../images/browser-3614768_1280.png"
               alt=""
             />
           </div>
@@ -183,7 +183,7 @@
             <img
               id="fi2"
               class="img-fluid"
-              src="images/cloud-3406627_1280-removebg-preview.png"
+              src="../images/cloud-3406627_1280-removebg-preview.png"
               alt=""
             />
           </div>
@@ -210,7 +210,7 @@
               <img
                 id="fi3"
                 class="img-fluid feature-img"
-                src="images/cloud-3865312_640.jpg"
+                src="../images/cloud-3865312_640.jpg"
                 alt="#"
               />
             </div>
@@ -240,7 +240,7 @@
 
                 <img
                   class="testimonial-img rounded-circle"
-                  src="images/profile-pic-3.jpg"
+                  src="../images/profile-pic-3.jpg"
                   alt="dog-profile"
                 />
                 <em class="d-block testimonial-person">Pedro Oliveira</em>
@@ -264,7 +264,7 @@
                 </p>
                 <img
                   class="testimonial-img rounded-circle"
-                  src="images/profile-pic-3.jpg"
+                  src="../images/profile-pic-3.jpg"
                   alt="dog-profile"
                 />
                 <em class="d-block testimonial-person">Joana Silva</em>
@@ -301,6 +301,7 @@
 
       <section id="contato">
         <form
+          action="/send_email"
           method="post"
           class="row p-5 g-5 container-fluid d-none d-md-flex"
         >
@@ -309,7 +310,7 @@
               Se interessou? Entre em contato com a gente!
             </h1>
             <img
-              src="images/mail-1454731_1280.png"
+              src="../images/mail-1454731_1280.png"
               class="img-fluid"
               id="form-img"
               alt=""
@@ -375,7 +376,7 @@
         >
           <div class="form-header d-flex gap-2 align-items-center">
             <h3>Se interessou? Entre em contato com a gente!</h3>
-            <img src="images/mail-1454731_1280.png" alt="" class="img-fluid" />
+            <img src="../images/mail-1454731_1280.png" alt="" class="img-fluid" />
           </div>
           <div class="data mb-4">
             <label for="fName" class="form-label d-block">Nome: </label>
